kubernetes/apps/chelonian/turtle-track/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: turtle-track
  labels:
    app.kubernetes.io/name: turtle-track
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: turtle-track
