kubernetes/apps/chelonian/turtle-track/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: turtle-track
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - &host "turtle-track.${SECRET_DOMAIN}"
      secretName: ${SECRET_DOMAIN/./-}-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: turtle-track
                port:
                  name: http
